--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <jar.with.deps>jar-with-dependencies</jar.with.deps>
     <buildDirectory>target</buildDirectory>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <repositories>
     <repository>
